--- a/ss1_html/WebstormProjects/untitled/baitap3.html
+++ b/ss1_html/WebstormProjects/untitled/baitap3.html
@@ -11,7 +11,7 @@
       <li>Địa chỉ: Sao Hoả</li>
       <li>Số điện thoại: 113</li>
       <li>Email: xnxx@gmail.com</li>
-      <li>Ảnh  <img src="https://cf.shopee.vn/file/32f81daacddafaa9a89f3976d1095fea" alt="Black cat" width="80" height="80"/>
+      <li>Ảnh <br>  <img src="https://cf.shopee.vn/file/32f81daacddafaa9a89f3976d1095fea" alt="Black cat" width="80" height="80"/>
       <li>Học vấn: Ngu</li>
       <li>Bằng cấp: Haward</li>
       <li>Kỹ năng: Tán gái</li>
