--- a/ss5_html/ss5-bt3.html
+++ b/ss5_html/ss5-bt3.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>CODEGYM</title>
+  <title>Tạo form lấy survey khách hàng</title>
   <meta charset="UTF-8">
   <style>
     h4 {
