--- a/ss5_html/ss5-bt2a.html
+++ b/ss5_html/ss5-bt2a.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" href="baitap1.css">
+    <link rel="stylesheet" href="baitap2a.css">
 
 </head>
 <body>
