--- a/ss5_html/baitap5.html
+++ b/ss5_html/baitap5.html
@@ -6,9 +6,9 @@
     <style>
        body{
            background-color: white;
+           text-align: center;
        }
        table {
-           border: 1px solid #CCC;
            border-collapse: collapse;
            background-color: darkorange;
        }
@@ -23,7 +23,7 @@
             background-color: black;
         }
       td{
-          border: none;
+          border: none
       }
     </style>
 </head>
@@ -50,6 +50,15 @@
         <td class="black"></td>
         <td class="white"></td>
         <td class="black"></td>
+        <th></th>
+        <th></th>
+        <th></th>
+        <th></th>
+        <th></th>
+        <th></th>
+        <th></th>
+        <th></th>
+        <th></th>
     </tr>
     <tr>
         <th>B</th>
@@ -128,6 +137,23 @@
         <td class="black"></td>
         <td class="white"></td>
     </tr>
+    <tr></tr>
+    <th></th>
+    <tr></tr>
+    <th></th>
+    <tr></tr>
+    <th></th>
+    <tr></tr>
+    <th></th>
+    <tr></tr>
+    <th></th>
+    <tr></tr>
+    <th></th>
+    <tr></tr>
+    <th></th>
+    <tr></tr>
+    <th></th>
+
 </table>
 </body>
 </html>
