--- a/ss4_git_html/baitap3.html
+++ b/ss4_git_html/baitap3.html
@@ -8,15 +8,15 @@
 <h1>CV Cá Nhân</h1>
   <ul>
       <li>Họ và tên: Trần Trọng Nghĩa</li>
-      <li>Địa chỉ: Sao Hoả</li>
-      <li>Số điện thoại: 113</li>
-      <li>Email: xnxx@gmail.com</li>
+      <li>Địa chỉ: k03/10 Vạn Tường</li>
+      <li>Số điện thoại: 0898175813</li>
+      <li>Email: ttn.hdttb152004@gmail.com</li>
       <li>Ảnh <br>  <img src="https://cf.shopee.vn/file/32f81daacddafaa9a89f3976d1095fea" alt="Black cat" width="80" height="80"/>
-      <li>Học vấn: Ngu</li>
-      <li>Bằng cấp: Haward</li>
-      <li>Kỹ năng: Tán gái</li>
-      <li>Kinh nghiệm: 25 năm</li>
-      <li>Định hướng phát triển cá nhân: Sad boy</li>
+      <li>Học vấn: Giỏi</li>
+      <li>Bằng cấp: 3 </li>
+      <li>Kỹ năng: chưa biết</li>
+      <li>Kinh nghiệm: không có </li>
+      <li>Định hướng phát triển cá nhân: Lập trình viên</li>
   </ul>
 </body>
 </html>
