--- a/ss12_kieu_mang_1/kieu_mang_1_bai_7.html
+++ b/ss12_kieu_mang_1/kieu_mang_1_bai_7.html
@@ -8,18 +8,19 @@
 <script>
     let str = "";
     let arr = Array(10)
-    for (let i=0;i < 10; i++){
+    for (let i = 0; i < 10; i++) {
         arr[i] = +prompt("Nhập các số nguyên")
-    }document.write(arr + "<br>")
+    }
+    document.write(arr + "<br>")
     let v = +prompt('Nhập vào giá trị bất kì');
-    for (let j=0 ; j < arr.length; j++) {
+    for (let j = 0; j < arr.length; j++) {
         if (arr[j] === v) {
-            str = v + " " + " is in the array"
-            break;
-        } else {
-            str = v + " " + " is not the array"
+            arr.splice(j , 1)
+            j = j - 1
+            arr.push("0")
         }
-    }document.write(str)
+    }
+    document.write(arr)
 </script>
 </body>
 </html>
