--- a/ss13_kieu_mang_2/bai_1.html
+++ b/ss13_kieu_mang_2/bai_1.html
@@ -6,7 +6,16 @@
 </head>
 <body>
 <script>
-    
+    let a = [
+        [1, 2, 3, 4],
+        [5, 6, 7, 8]
+    ]
+    for (let i in a){
+        document.write("row" + i + "<br>")
+        for (let j in a[i]){
+            document.write(a[i][j] + "<br>")
+        }
+    }
 </script>
 </body>
 </html>
