--- a/ss15_ham_2/bai_1.html
+++ b/ss15_ham_2/bai_1.html
@@ -11,8 +11,8 @@
 <script>
   function binhPhuong(){
     let a = document.getElementById("so").value;
-    let result = Math.sqrt(a)
-      document.getElementById("result").innerHTML = "Bình phương của " + a + "là: " + result
+    let result = Math.pow(a,2)
+      document.getElementById("result").innerHTML = "Bình phương của " + a + " là: " + result
   }
 </script>
 </body>
