--- a/ss12_kieu_mang_1/kieu_mang_1_bai_3.html
+++ b/ss12_kieu_mang_1/kieu_mang_1_bai_3.html
@@ -16,12 +16,12 @@
       max = +a[1];
     }
     if (a[i] > max) {
-      max = +a[i]
+      max = +a[i];
     }
-    tb += a[i]/n
+    tb += a[i]/n;
   }
-  document.getElementById("result").innerHTML = 'số lớn nhất là ' + max
-  document.getElementById("result").innerHTML = 'trung bình của các phần tử trong mảng là ' + tb
+  document.getElementById("result").innerHTML = 'số lớn nhất là ' + max;
+  document.getElementById("result").innerHTML = 'trung bình của các phần tử trong mảng là ' + tb;
 </script>
 </body>
 </html>
