--- a/ss12_kieu_mang_1/su_dung_cac_ham_co_san_cua_mang.html
+++ b/ss12_kieu_mang_1/su_dung_cac_ham_co_san_cua_mang.html
@@ -6,34 +6,34 @@
 </head>
 <body>
 <script>
-    // Bai1
-    // myColor = ["Red", "Green", "White", "Black"];
-    // document.write(myColor.join(","))
-    // Bai2
-    // let day_so =+prompt('Độ dài của dãy số');
-    // let a =[];
-    // let b=[]
-    // for (let i=0;i<day_so;i++){
-    //     a[i] = +prompt('Số bạn cần nhập');
-    //     if (a[i-1]%2 ===0 &&a[i]%2===0){
-    //         b.push('-',a[i])
-    //     }
-    //     else {
-    //         b.push(a[i]);
-    //     }
-    // }
-    // document.write(b.join(''))
-    // Bai3
-    // let str=prompt('Nhập chuỗi bạn muốn: ')
-    // let i;
-    // let result='';
-    // for (i=0;i<str.length;i++){
-    //     if (str[i]===str[i].toUpperCase()){
-    //         result=result+str[i].toLowerCase();
-    //     }
-    //     else result=result+str[i].toUpperCase();
-    // }
-    // document.write(result)
+    Bai1
+    myColor = ["Red", "Green", "White", "Black"];
+    document.write(myColor.join(","))
+    Bai2
+    let day_so =+prompt('Độ dài của dãy số');
+    let a =[];
+    let b=[]
+    for (let i=0;i<day_so;i++){
+        a[i] = +prompt('Số bạn cần nhập');
+        if (a[i-1]%2 ===0 &&a[i]%2===0){
+            b.push('-',a[i])
+        }
+        else {
+            b.push(a[i]);
+        }
+    }
+    document.write(b.join(''))
+    Bai3
+    let str=prompt('Nhập chuỗi bạn muốn: ')
+    let i;
+    let result='';
+    for (i=0;i<str.length;i++){
+        if (str[i]===str[i].toUpperCase()){
+            result=result+str[i].toLowerCase();
+        }
+        else result=result+str[i].toUpperCase();
+    }
+    document.write(result)
 </script>
 </body>
 </html>
