--- a/ss12_kieu_mang_1/kieu_mag_1_bai_8.html
+++ b/ss12_kieu_mang_1/kieu_mag_1_bai_8.html
@@ -8,9 +8,9 @@
 <script>
   let arr = Array(10);
   for (let i=0;i<arr.length;i++){
-    arr[i] = prompt("Mời bạn nhập vào các phần tử")
-    arr.sort()
-  }document.write(arr)
+    arr[i] = prompt("Mời bạn nhập vào các phần tử");
+    arr.sort();
+  }document.write(arr);
 </script>
 </body>
 </html>
