--- a/ss12_kieu_mang_1/kieu_mang_1_bai_2.html
+++ b/ss12_kieu_mang_1/kieu_mang_1_bai_2.html
@@ -9,18 +9,18 @@
     let a = [];
     let n = +prompt('Ban can bao nhieu phan tu?');
     let max;
-    let dem = 0
+    let dem = 0;
     for (let i = 1; i < n; i++) {
         a[i] = +prompt('Nhap cho phan tu a[' + i + ']: ');
         if (i === 1) {
             max = +a[1];
         }
         if (a[i] > max) {
-            max = +a[i]
-            dem = i
+            max = +a[i];
+            dem = i;
         }
     }
-    document.write('So lon nhat la: ' + max)
+    document.write('So lon nhat la: ' + max);
 </script>
 </body>
 </html>
