--- a/ss12_kieu_mang_1/kieu_mang_1_bai_5.html
+++ b/ss12_kieu_mang_1/kieu_mang_1_bai_5.html
@@ -9,15 +9,15 @@
 <script>
     let a = [];
     let n = +prompt('Số phần tử bạn cần nhập');
-    let dem =0
+    let dem = 0;
     for (let i = 0; i < n; i++) {
         a[i] = +prompt('Nhap cho phan tu la:  ' + i);
-        if(a[i]<0){
-            document.write(a[i])
+        if (a[i] < 0) {
+            document.write(a[i]);
             dem++;
         }
     }
-    document.getElementById("result").innerHTML = 'số lượng nguyên âm trong mảng là ' + dem
+    document.getElementById("result").innerHTML = 'số lượng nguyên âm trong mảng là ' + dem;
 </script>
 </body>
 </html>
