--- a/ss8_ss9_if_else_switch_case/bai_tap_chi_so_can_nang/bt_tinh_chi_so_can_nang.html
+++ b/ss8_ss9_if_else_switch_case/bai_tap_chi_so_can_nang/bt_tinh_chi_so_can_nang.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <style>
+
+    </style>
 </head>
 <body>
 <h2>Tính chỉ số cân nặng</h2>
