--- a/ss12_kieu_mang_1/kieu_mang_1_bai_4.html
+++ b/ss12_kieu_mang_1/kieu_mang_1_bai_4.html
@@ -16,7 +16,7 @@
         for (let j = a.length -1; j >= 0; j--) {
             b[count] = a[j];
             count++;
-    }    document.write("Mảng đảo ngược là: " + b)
+    }    document.write("Mảng đảo ngược là: " + b);
 </script>
 </body>
 </html>
