--- a/ss12_kieu_mang_1/kieu_mang_1_bai_4.html
+++ b/ss12_kieu_mang_1/kieu_mang_1_bai_4.html
@@ -13,10 +13,11 @@
     for (let i = 0; i < n; i++) {
         a[i] = +prompt('Nhap cho phan tu la:');
     }
-        for (let j = a.length -1; j >= 0; j--) {
-            b[count] = a[j];
-            count++;
-    }    document.write("Mảng đảo ngược là: " + b);
+    for (let j = a.length - 1; j >= 0; j--) {
+        b[count] = a[j];
+        count++;
+    }
+    document.write("Mảng đảo ngược là: " + b);
 </script>
 </body>
 </html>
