--- a/ss16_oop/xay_dung_lop_mo_ta_hcn.html
+++ b/ss16_oop/xay_dung_lop_mo_ta_hcn.html
@@ -6,7 +6,14 @@
 </head>
 <body>
 <script>
-
+class  Rectangle{
+    constructor(height,width,area,perimeter) {
+        this.height = height;
+        this.width = width;
+        this.area = area;
+        this.perimeter = perimeter;
+    }
+}
 </script>
 </body>
 </html>
