--- a/ss16_oop/xay_dung_lop_mo_ta_hcn.html
+++ b/ss16_oop/xay_dung_lop_mo_ta_hcn.html
@@ -5,8 +5,8 @@
     <title>Title</title>
 </head>
 <body>
-<canvas id="rectangle" width="500" height="500"></canvas>
 <p id="result"></p>
+<canvas id="rectangle" width="500" height="500"></canvas>
 <script>
     class Rectangle {
         constructor(height, width) {
@@ -35,22 +35,20 @@
         }
 
         getHeight(newHeight) {
-           return  this.height = newHeight;
+            return this.height = newHeight;
         }
     }
-    let rectangle = new Rectangle(250,40);
-rectangle.area();
-rectangle.perimeter();
 
-    // rectangle.setHeight(prompt("Nhập lại chiều cao mới"));
-    // rectangle.setWidth(prompt("Nhập lại chiều dài mới"));
-
+    let rectangle = new Rectangle(250, 40);
+    rectangle.area();
+    rectangle.perimeter();
+    rectangle.setWidth(200)
+    rectangle.setHeight(40)
     let canvasRectangle = document.getElementById("rectangle");
     let ctx = canvasRectangle.getContext("2d");
-    ctx.rect(200, 200, this.height, this.width);
+    ctx.beginPath();
+    ctx.rect(200, 200, 250, 40);
     ctx.stroke();
-    ctx.fillStyle = "yellow";
-    ctx.fill();
 </script>
 </body>
 </html>
