--- a/ss16_oop/xay_dung_lop_mo_ta_temperature.html
+++ b/ss16_oop/xay_dung_lop_mo_ta_temperature.html
@@ -20,8 +20,8 @@
             }
     }
     let temperature = new Temperature(+prompt());
-    temperature.cSangF()
-    temperature.cSangKevin()
+    temperature.cSangF();
+    temperature.cSangKevin();
 </script>
 </body>
 </html>
