--- a/case_study/task3/bai5.html
+++ b/case_study/task3/bai5.html
@@ -35,8 +35,8 @@
                 document.write("thoát gọi món")
                 break;
         }
-    } while (i >= 1 || i <= 7)
-    document.write("giá tiền" + price);
+    } while (i < 1 || i >= 7)
+    document.write(" Giá tiền là: " + price);
 </script>
 </body>
 </html>
