--- a/case_study/task3/bai5.html
+++ b/case_study/task3/bai5.html
@@ -32,10 +32,10 @@
                 price = amount * 30000;
                 break;
             case 7:
-                document.write("thoát gọi món")
+                document.write("thoát gọi món");
                 break;
         }
-    } while (i < 1 || i >= 7)
+    } while (i < 1 || i >= 7);
     document.write(" Giá tiền là: " + price);
 </script>
 </body>
