--- a/case_study/task3/bai5.html
+++ b/case_study/task3/bai5.html
@@ -7,7 +7,7 @@
 <body>
 <script>
     let price;
-    let drink = ["Cafe", "Cam vắt", "Nước ép cà rốt", "Nước ép cà chua", "Nước lọc", "Nước dừa"];
+    let drink = ["1.Cafe", "2.Cam vắt", "3.Nước ép cà rốt", "4.Nước ép cà chua", "5.Nước lọc", "6.Nước dừa"];
     document.write("Menu có: " + drink + "<br>");
     do {
          i = +prompt("Nhập thức uống muốn chọn");
